| Summary: | ASTERISK-28987: BridgeCreated ARI event shows wrong video_mode info | ||
| Reporter: | sungtae kim (pchero) | Labels: | |
| Date Opened: | 2020-07-10 18:21:06 | Date Closed: | 2020-07-24 09:14:34 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_stasis |
| Versions: | 16.11.1 17.5.1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | If the ARI creates a bridge, BridgeCreated ARI event shows wrong video_mode info.
{code} > POST /ari/bridges HTTP/1.1 > Host: localhost:8088 > Authorization: Basic YXN0ZXJpc2s6YXN0ZXJpc2s= > User-Agent: insomnia/2020.3.0 > Content-Type: application/json > Accept: */* > Content-Length: 56 | { | "bridgeId": "test-conference", | "type": "video_sfu" | } { "id": "test-conference", "technology": "softmix", "bridge_type": "mixing", "bridge_class": "stasis", "creator": "Stasis", "name": "", "channels": [], "creationtime": "2020-07-11T01:17:30.242+0200", "video_mode": "sfu" } {"type":"BridgeCreated","timestamp":"2020-07-11T01:17:30.242+0200","bridge":{"id":"test-conference","technology":"softmix","bridge_type":"mixing","bridge_class":"stasis","creator":"Stasis","name":"","channels":[],"creationtime":"2020-07-11T01:17:30.242+0200","video_mode":"none"},"asterisk_id":"08:00:27:6c:23:28","application":"test"} {code} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2020-07-10 18:21:07.754-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Friendly Automation (friendly-automation) 2020-07-24 09:14:36.590-0500 Change 14702 merged by Friendly Automation: stasis_bridge.c: Fixed wrong video_mode shown [https://gerrit.asterisk.org/c/asterisk/+/14702|https://gerrit.asterisk.org/c/asterisk/+/14702] By: Friendly Automation (friendly-automation) 2020-07-24 11:33:38.333-0500 Change 14701 merged by George Joseph: stasis_bridge.c: Fixed wrong video_mode shown [https://gerrit.asterisk.org/c/asterisk/+/14701|https://gerrit.asterisk.org/c/asterisk/+/14701] By: Friendly Automation (friendly-automation) 2020-07-24 11:33:56.527-0500 Change 14703 merged by George Joseph: stasis_bridge.c: Fixed wrong video_mode shown [https://gerrit.asterisk.org/c/asterisk/+/14703|https://gerrit.asterisk.org/c/asterisk/+/14703] By: Friendly Automation (friendly-automation) 2020-07-24 11:34:11.623-0500 Change 14633 merged by George Joseph: stasis_bridge.c: Fixed wrong video_mode shown [https://gerrit.asterisk.org/c/asterisk/+/14633|https://gerrit.asterisk.org/c/asterisk/+/14633] By: Friendly Automation (friendly-automation) 2020-08-11 17:21:07.179-0500 Change 14708 merged by Kevin Harwell: stasis_bridge.c: Fixed wrong video_mode shown [https://gerrit.asterisk.org/c/asterisk/+/14708|https://gerrit.asterisk.org/c/asterisk/+/14708] | ||